# Smart-UAV-Return-GNSS-Station

./: .gitignore  .gitmodules  README.md  geomap.ipynb  geomap.py  requirements.txt
geomap/: geomap.py  requirements.txt
geomap_db/: CMakeCache.txt  CMakeLists.txt  Makefile  add_embeddings  cmake_install.cmake  get_aprox_location  pre_flight.py  print_table  requirements.txt  test.cpp
geomap_db/include/: geomap_db.hpp  location_seeker.hpp
geomap_db/nn_models/: pca.joblib
geomap_db/nn_models/embedding_net/: config.json
geomap_db/py_src/: geomap.py  image_processing.py
geomap_db/src/: add_embeddings.cpp  geomap_db.cpp  get_aprox_location.cpp  location_seeker.cpp  print_table.cpp
preprocessing/: image_processing_pipeline.ipynb
rockpi/: CMakeLists.txt  add_embedding_db.cpp  get_approximate_location_db.cpp  print_table.cpp  test.cpp
rockpi/include/: geomap_db.hpp
rockpi/src/: geomap_db.cpp
segmentation/: .gitignore  DronUniver_YOLOv8_roboflowdataset.ipynb  README.md  segmenter.py
